--- a/index.html
+++ b/index.html
@@ -1,43 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
+<!-- This website was heavily inspired by this website https://hytracer.ink-->
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="98.css" />
     <title>HyprDawoox</title>
 </head>
-<body>
+<body class="wrapper">
     <script src="./oneko.js"></script>
-    <div class="window">
-        <div class="title-bar">
-            <div class="title-bar-text">Dawoox</div>
+    <div class="content">
+        <div class="content_column">
+            <div class="window secondaryWindow">
+                <div class="title-bar">
+                    <div class="title-bar-text">Server status</div>
 
-            <div class="title-bar-controls">
-                <button aria-label="Minimize"></button>
-                <button aria-label="Maximize"></button>
-                <button aria-label="Close"></button>
+                    <div class="title-bar-controls">
+                        <button aria-label="Minimize"></button>
+                        <button aria-label="Maximize"></button>
+                        <button aria-label="Close"></button>
+                    </div>
+                </div>
+                <div class="window-body">
+                    <p>If you see this it mean the server is working</p>
+                    <progress></progress>
+                </div>
+            </div>
+            <div class="window secondaryWindow">
+                <div class="title-bar">
+                    <div class="title-bar-text">Stuff I do</div>
+
+                    <div class="title-bar-controls">
+                        <button aria-label="Minimize"></button>
+                        <button aria-label="Maximize"></button>
+                        <button aria-label="Close"></button>
+                    </div>
+                </div>
+                <p><span class="neon">[ - ]</span> <a target="_blank" href="https://github.com/dawoox"> My Github</a></p>
             </div>
         </div>
-        <div class="window-body">
-            <p>Hello, world !</p>
-            <p>I'm Dawoox, a french developer.</p>
-        </div>
-        <fieldset>
-            <legend>More about me</legend>
-            <p><a href="https://github.com/dawoox">My GitHub</a></p>
-        </fieldset>
-    </div>
-    <div class="window">
-        <div class="title-bar">
-            <div class="title-bar-text">Projects used here</div>
+        <div class="window mainWindow">
+            <div class="title-bar">
+                <div class="title-bar-text">Dawoox.exe</div>
 
-            <div class="title-bar-controls">
-                <button aria-label="Help"></button>
-                <button aria-label="Close"></button>
+                <div class="title-bar-controls">
+                    <button aria-label="Minimize"></button>
+                    <button aria-label="Maximize"></button>
+                    <button aria-label="Close"></button>
+                </div>
             </div>
+            <div class="window-body">
+                <p>Hello, world!</p>
+                <p>I'm Dawoox, a french developer.</p>
+            </div>
+            <fieldset>
+                <legend>More about me</legend>
+                This website is still a work in progress, I'm still learning HTML and CSS.
+                More stuff will be added soon.
+            </fieldset>
+            <section class="buttons_right">
+                <button class="button">OK</button>
+                <button class="button">Cancel</button>
+            </section>
         </div>
-        <div class="window-body">
-            <img src="assets/saynotoweb3.gif">
+        <div class="content_column">
+            <div class="window secondaryWindow">
+                <div class="title-bar">
+                    <div class="title-bar-text">About</div>
+
+                    <div class="title-bar-controls">
+                        <button aria-label="Help"></button>
+                        <button aria-label="Close"></button>
+                    </div>
+                </div>
+                <div class="window-body">
+                    <img src="assets/saynotoweb3.gif" alt="Say no to Web 3">
+                </div>
+            </div>
         </div>
     </div>
 </body>
