[FEATURE] Add more information, and IE badge

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
                     </div>
                 </div>
                 <div class="window-body">
-                    <p>If you see this it mean the server is working</p>
+                    <p class="neon">[ Online ]</p>
+                    <p>Serving over 50GB monthly to 3 domains!</p>
                     <progress></progress>
                 </div>
             </div>
@@ -52,11 +53,12 @@
             <div class="window-body">
                 <p>Hello, world!</p>
                 <p>I'm Dawoox, a french developer.</p>
+                <p>This website is still a work in progress, I'm still learning HTML and CSS.</p>
             </div>
             <fieldset>
                 <legend>More about me</legend>
-                This website is still a work in progress, I'm still learning HTML and CSS.
-                More stuff will be added soon.
+                I'm a first year student at <a href="https://www.epitech.eu" class="a_light_neon">Epitech BDX</a>.
+                I love doing pretty much anything on a computer, but I specialize in low-level and backend stuff.
             </fieldset>
             <section class="buttons_right">
                 <button class="button">OK</button>
@@ -74,7 +76,8 @@
                     </div>
                 </div>
                 <div class="window-body">
-                    <img src="assets/saynotoweb3.gif" alt="Say no to Web 3">
+                    <img class="badges" src="assets/saynotoweb3.gif" alt="Say no to Web 3">
+                    <img class="" src="assets/Internet_Explorer_icon.gif" alt="Internet explorer icon">
                 </div>
             </div>
         </div>
