Update "More about me" section

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="lib/css/98.css" />
     <title>Dawoox</title>
-    <!--<script async src="lib/js/oneko.js"></script>-->
-    <script async src="scripts/window_mov.js" type="module"></script>
+    <script async src="lib/js/oneko.js"></script>
+    <!--<script async src="scripts/window_mov.js" type="module"></script>-->
 </head>
 <body class="wrapper">
     <div class="content">
@@ -28,9 +28,9 @@
                     <progress></progress>
                 </div>
             </div>
-            <div class="window secondaryWindow" id="stuff-I-do">
-                <div class="title-bar" id="stuff-I-do-bar">
-                    <div class="title-bar-text">Stuff I do</div>
+            <div class="window secondaryWindow" id="where-to-find-me">
+                <div class="title-bar" id="where-to-find-me-bar">
+                    <div class="title-bar-text">Where to find me</div>
 
                     <div class="title-bar-controls">
                         <button aria-label="Minimize"></button>
@@ -38,7 +38,8 @@
                         <button aria-label="Close"></button>
                     </div>
                 </div>
-                <p><span class="neon">[ - ]</span> <a target="_blank" href="https://github.com/dawoox"> My Github</a></p>
+                <p><span class="neon">[ - ]</span> <a target="_blank" href="https://github.com/dawoox"> Github</a></p>
+                <p><span class="neon">[ - ]</span> <a target="_blank" href="https://www.linkedin.com/in/antoine-candelon-0654342b5/"> Linkedin</a></p>
             </div>
         </div>
         <div class="window mainWindow" id="mainWindow">
@@ -53,14 +54,24 @@
             </div>
             <div class="window-body">
                 <p>Hello, world!</p>
-                <p>I'm Dawoox, a french developer.</p>
+                <p>I'm Dawoox, a French developer (and maker).</p>
                 <p>This website is still a work in progress, I'm still learning HTML and CSS.</p>
             </div>
             <fieldset>
                 <legend>More about me</legend>
+                <p>
                 I'm a first year student at <a href="https://www.epitech.eu" class="a_light_neon">Epitech BDX</a>.
+                <br>
                 I love doing pretty much anything on a computer, but I specialize in low-level and backend stuff.
+                <br>
+                <br>
+                I'm running as my daily a Framework 16 laptop with NixOS running on it.
+                My graphical environment is Wayland with a bunch of stuff to make it my dream laptop.
+                (It even play Windows games with only a 1.7% performance lost!).
+                This config is publicly available <a href="https://github.com/dawoox/nixos" class="a_light_neon">here</a>.
+                </p>
             </fieldset>
+            <br>
             <section class="buttons_right">
                 <button class="button">OK</button>
                 <button class="button">Cancel</button>
